--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,3 +13,7 @@ body {
 .input-error {
   @apply focus:border-red-300 focus:ring-red-200;
 }
+
+.title {
+  font-family: "Bungee Shade", cursive;
+}
